syntax = "proto3";
package nghuyenthevinh2000.nebula.ico;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "ico/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/notional-labs/anone/x/ico/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/notional-labs/anone/ico/params";
  }
  
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// ====== ICO
message ICORequest {

}

message ICOResponse {

}